#11196: Trying to fix functional-tests  in Jenkins (#11591) (#11593)